--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 php:
   - 7.0
 install:
+  - ls /home/travis/.phpenv/versions/7.0.3/lib/php/extensions/no-debug-zts-20151012/*
   - echo "extension = mongodb.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - composer install --prefer-dist
 script:
