--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,11 @@
   },
   "require-dev": {
     "codeclimate/php-test-reporter": "^0.3.0"
+  },
+  "scripts": {
+    "test": [
+        "phpunit"
+    ]
   }
+
 }
