--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0",
+    "php": ">=7.0.0,<8.0",
     "ext-mongodb": "*",
     "mongodb/mongodb": "^1.0",
-    "phpunit/phpunit": "^7.0"
+    "phpunit/phpunit": ">=6.0,<8.0"
   },
   "autoload": {
     "psr-4": {
