--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
     - php: 7.0
       env: PHPUNIT=^7.0
 install:
-  - pecl install mongodb || true
+  - pecl install --force mongodb
   - composer require --no-update --no-interaction --no-ansi phpunit/phpunit $PHPUNIT
   - composer install --no-interaction --no-ansi --prefer-dist
 script:
