--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,7 +7,10 @@ jobs:
     strategy:      
       matrix:
         php: ['7.2', '7.3', '7.4']
-        phpunit: ['6.0', '7.0', '8.0']
+        phpunit: ['6.0', '7.0', '8.0', '9.0']
+        exclude:
+        - php: '7.2'
+          phpunit: '9.0'
     runs-on: ubuntu-latest
 
     steps:
