--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": ">=7.1.0,<8.0",
     "ext-mongodb": "*",
     "mongodb/mongodb": "^1.0",
-    "phpunit/phpunit": ">=6.0,<9.0"
+    "phpunit/phpunit": ">=6.0,<10.0",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
@@ -21,15 +22,9 @@
     }
   },
   "autoload-dev": {
-    "files": [
-      "vendor/phpunit/phpunit/src/Framework/Assert/Functions.php"
-    ],
     "psr-4": {
       "Helmich\\MongoMock\\Tests\\": "tests"
     }
-  },
-  "require-dev": {
-    "codeclimate/php-test-reporter": "^0.3.0 || ^0.4.0"
   },
   "scripts": {
     "test": [
