--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,6 +14,8 @@ jobs:
         exclude:
         - php: '7.2'
           phpunit: '9.0'
+        - php: '8.0'
+          phpunit: '6.0'
     runs-on: ubuntu-latest
 
     steps:
