--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,8 @@ jobs:
           phpunit: '9.0'
         - php: '8.0'
           phpunit: '6.0'
+        - php: '8.0'
+          phpunit: '7.0'
     runs-on: ubuntu-latest
 
     steps:
